# gateway

./: .env  .env.template  Cargo.toml  dockerfile  dockerfile.dev  dockerfile.prod
src/: lib.rs  main.rs  message.rs
src/common/: state.rs  types.rs
src/config/: envs.rs
src/core/: transport.rs
src/core/transport/: nats_transport.rs
src/message/: dtos.rs  message_controller.rs  message_service.rs
src/message/dtos/: edit_message_request_dto.rs  get_message_payload.rs  send_message_request_dto.rs
