[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
axum = "0.8.1"
dotenv = "0.15.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.14.0", features = ["serde", "v4"] }
